sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value v
			if (!plusPetit(getValeur(i-j),v)){
                                                      ^AlgInsertionSort:14: error: not found: value v
		 setValeur(lastCase,v);
                                    ^